A lot of new stuff.

--- a/resume.tex
+++ b/resume.tex
@@ -8,8 +8,8 @@
 
 \documentclass[11pt,a4paper]{article}
 
-% Variables
-\input{params.tex}
+% Get my data.
+\input{me.tex}
 
 % Packages
 \usepackage{latexsym}
@@ -54,8 +54,8 @@
 % Begin the document
 \begin{document}
 
-Hello \myemail{}! % This is a comment
-$Hello world!$ %math mode
+% Header with personal information
+\myheader
 
 % End the document
 \end{document}
