Improve header alignment.

--- a/resume.tex
+++ b/resume.tex
@@ -60,10 +60,7 @@
 % Header with personal information
 \myheader
 
-% Nice line that looks kinda sexy
-\vspace{-0.1in}\hrule
-
-% Things I done did do
+% Things I did
 \subsection*{Experience}
 \myexperience
 
