--- a/me.tex
+++ b/me.tex
@@ -66,11 +66,13 @@
 % Define my header
 \newcommand{\myheader}{%
   % Create a header with my name and contact information.
-  % The name should occupy about the left 1/3 of the page, and the contact
-  % information should occupy about the right 1/3 of the page.
-  \begin{tabularx}{\textwidth}{L{3in} X R{3.5in}} % Adjust the width of the non-X columns as needed
-    \myheadername &  & \mycontactinfo{} \\
+  % The name should occupy about the left half of the page, and the contact
+  % information should occupy about the right half of the page.
+  \noindent\begin{tabularx}{\textwidth}{L{3.5in} R{\dimexpr\textwidth-3.5in\relax}}
+    \myheadername & \mycontactinfo \\
   \end{tabularx}
+  % Nice line that looks kinda sexy
+  \vspace{-0.1in}\hrule
 }
 
 % Define a list of employers and periods of employment.
@@ -86,9 +88,9 @@
 % employment on the right.
 \newcommand{\resumeemployer}[2]{%
   % Use a tabular* to make the table fill the entire width of the page.
-  \begin{tabular*}{7in}{L{5in} R{2in}}
+  \noindent\begin{tabularx}{\textwidth}{L{5in} R{\dimexpr\textwidth-5in\relax}}
     \textbf{#1} & #2 \\
-  \end{tabular*}\vspace{-4pt}
+  \end{tabularx}\vspace{-4pt}
 }
 
 % Define a list of roles at a given employer.
