--- a/me.tex
+++ b/me.tex
@@ -46,9 +46,9 @@
 
 % My email address contact item.
 \newcommand{\myemailcontact}{%
-  \BeginAccSupp{%
-    method=pdfstringdef,%
-    space=true,%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    space=true,
     ActualText={\pdfnewline Email: \myemail}
   }\normalfont \contactinfoitem{\faAt}{mailto:\myemail}{\myemail}
   \EndAccSupp{}
@@ -56,73 +56,60 @@
 
 % Phone number contact item.
 \newcommand{\myphonecontact}{%
-  \BeginAccSupp{%
-    method=pdfstringdef,%
-    ActualText={\pdfnewline Phone: \myphone}%
-  }\normalfont \contactinfoitem{\faPhone}{tel:\myphoneplain}{\myphone}%
-  \EndAccSupp{}%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    ActualText={\pdfnewline Phone: \myphone}
+  }\normalfont \contactinfoitem{\faPhone}{tel:\myphoneplain}{\myphone}
+  \EndAccSupp{}
 }
 
 % Website contact item.
 \newcommand{\mywebsiteurl}{https://\mywebsite/}
 \newcommand{\mywebsitecontact}{%
-  \BeginAccSupp{%
-    method=pdfstringdef,%
-    ActualText={\pdfnewline Website: \mywebsiteurl}%
-  }\normalfont \contactinfoitem{\faGlobe}{\mywebsiteurl}{\mywebsite}%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    ActualText={\pdfnewline Website: \mywebsiteurl}
+  }\normalfont \contactinfoitem{\faGlobe}{\mywebsiteurl}{\mywebsite}
   \EndAccSupp{}
 }
 
 % LinkedIn supplemental commands.
 \newcommand{\mylinkedinurl}{https://www.linkedin.com/in/\mylinkedinusername/}
 \newcommand{\mylinkedincontact}{%
-  \BeginAccSupp{%
-    method=pdfstringdef,%
-    ActualText={\pdfnewline LinkedIn: \mylinkedinurl}%
-  }\normalfont \contactinfoitem{\faLinkedin}{\mylinkedinurl}{\mylinkedinusername}%
-  \EndAccSupp{}%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    ActualText={\pdfnewline LinkedIn: \mylinkedinurl}
+  }\normalfont \contactinfoitem{\faLinkedin}{\mylinkedinurl}{\mylinkedinusername}
+  \EndAccSupp{}
 }
 
 % GitHub supplemental commands.
 \newcommand{\mygithuburl}{https://github.com/\mygithubusername/}
 \newcommand{\mygithubcontact}{%
-  \BeginAccSupp{%
-    method=pdfstringdef,%
-    ActualText={\pdfnewline GitHub: \mygithuburl}%
-  }\normalfont \contactinfoitem{\faGithub}{\mygithuburl}{\mygithubusername}%
-  \EndAccSupp{}%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    ActualText={\pdfnewline GitHub: \mygithuburl}
+  }\normalfont \contactinfoitem{\faGithub}{\mygithuburl}{\mygithubusername}
+  \EndAccSupp{}
 }
 
 % My name, linked to my website.
-\newcommand{\myheadername}{%
-  % Make the name very large and bold, unlike me.
-  \Huge\bfseries%
-  \myfullname%
-}
+\newcommand{\myheadername}{\Huge\bfseries\myfullname}
 
 % My contact information is a list of contact items, separated by bullet points
 % when they occur in the same line, and separated by newlines when they occur
 % on different lines.
 \newcommand{\mycontactinfo}{%
-  % Right-align the contact information.
-  \raggedleft%
-  % Negative padding on the top to make the contact information higher.
-  \vspace{-1.75em}%
-  % Let's make this text a little smaller.
-  \small%
+  \raggedleft \small
   \myemailcontact \contactinfoitemseparator \myphonecontact \\
   \mywebsitecontact \contactinfoitemseparator \mylinkedincontact \contactinfoitemseparator \mygithubcontact %
 }
 
-% Define my header
+% Define my header.
 \newcommand{\myheader}{%
-  % Create a header with my name and contact information.
-  % The name should occupy about the left half of the page, and the contact
-  % information should occupy the rest of the page.
   \noindent\begin{tabularx}{\textwidth}{@{}L R@{}}
-    \myheadername & \mycontactinfo \\
-  \end{tabularx}
-  \vspace{-0.1in}\hrule
+    \myheadername & \vspace{-1.75em}\mycontactinfo \\
+  \end{tabularx}\vspace{-0.1in}\hrule
 }
 
 % Define a list of employers and periods of employment.
@@ -137,18 +124,16 @@
 % This is a two-column table with the employer on the left and the period of
 % employment on the right.
 \newcommand{\resumeemployer}[2]{%
-  % Use a tabularx to make the table fill the entire width of the page.
   \noindent\begin{tabularx}{\linewidth}{@{}L R@{}}
-    \textbf{#1} & #2 \\
+    \item \textbf{#1} & #2 \\
   \end{tabularx}\vspace{-4pt}
 }
 
 % Define a list of roles at a given employer.
 % This will be a list of items, each of which is a resumerole command.
 \newcommand{\resumeroles}[1]{%
-  % Begin a list (not indented, no bullets, etc).
   \begin{itemize}[leftmargin=0pt, noitemsep, nosep, label={}]
-    #1
+    \item \small #1
   \end{itemize}
 }
 
@@ -156,16 +141,14 @@
 % This is a two-column table with the job title on the left, project name in
 % parentheses, and the period of the position on the right.
 \newcommand{\resumerole}[3]{%
-  \small
   \begin{tabularx}{\linewidth}{@{}L R@{}}
     #1 (#2) & #3 \\
   \end{tabularx}
 }
 
-% Define a list of resume items within a given role.
-% This will be a list of items, each of which is a resumeitem command.
+% Define a list of resume role items within a given role.
+% This will be a list of items, each of which is a resumeroleitem command.
 \newcommand{\resumeroleitems}[1]{%
-  \footnotesize
   \begin{itemize}
     #1
   \end{itemize}\vspace{6pt}
@@ -173,7 +156,7 @@
 
 % An item in a list.
 \newcommand{\resumeroleitem}[1]{%
-  \item #1 \vspace{-2pt}
+  \item \footnotesize #1 \vspace{-2pt}
 }
 
 % Define my experience
@@ -181,19 +164,19 @@
   % Begin experience list
   \resumeemployers{%
     % Begin Agile Six
-    \item \resumeemployer{\href{https://agile6.com}{Agile Six Applications, Inc.}}{October 2020 -- Present}
+    \resumeemployer{\href{https://agile6.com}{Agile Six Applications, Inc.}}{October 2020 -- Present}
     {% Begin roles at Agile Six
       \resumeroles{% List of roles at Agile Six
 
         % CIE DevOps Engineer Role
-        \item \resumerole{Senior DevOps Engineer}{VA.gov Check-In Experience Team}{February 2024 -- Present}{%
+        \resumerole{Senior DevOps Engineer}{VA.gov Check-In Experience Team}{February 2024 -- Present}{%
           \resumeroleitems{%
             \resumeroleitem{Haven't blown anything up yet}
           } % End CIE DevOps Engineer role items.
         } % End CIE DevOps Engineer Role
 
         % CMS Tech Lead Role
-        \item \resumerole{Technical Lead}{VA.gov Platform CMS Team}{July 2023 -- February 2024}{%
+        \resumerole{Technical Lead}{VA.gov Platform CMS Team}{July 2023 -- February 2024}{%
           \resumeroleitems{%
             \resumeroleitem{Fostered transparency and alignment by communicating project progress, updates, and any issues or blockers}
             \resumeroleitem{Maintained clear and open lines of communication, enabling stakeholders to make informed decisions and ensuring project success}
@@ -206,7 +189,7 @@
         }% End CMS Tech Lead Role
 
         % CMS DevOps Engineer Role
-        \item \resumerole{Senior DevOps Engineer}{VA.gov Platform CMS Team}{October 2020 -- February 2024}{%
+        \resumerole{Senior DevOps Engineer}{VA.gov Platform CMS Team}{October 2020 -- February 2024}{%
           \resumeroleitems{%
             \resumeroleitem{Led the implementation of industry QA architecture best practices, resulting in a 20\% improvement in overall product quality and customer satisfaction, while meeting regulatory standards and compliance requirements}
             \resumeroleitem{Collaborated closely with cross-functional product teams to align technical strategies with business goals, driving continuous improvement across the organization}
@@ -221,18 +204,18 @@
     }% End Agile Six
 
     % Begin Aviation International News
-    \item \resumeemployer{\href{https://www.ainonline.com/}{Aviation International News}}{January 2015 -- October 2020}
+    \resumeemployer{\href{https://www.ainonline.com/}{Aviation International News}}{January 2015 -- October 2020}
     {% Begin roles at Aviation International News
       \resumeroles{% List of roles at Aviation International News
 
         % Senior Software/DevOps Engineer Role
-        \item \resumerole{Senior Software/DevOps Engineer}{ainonline.com}{January 2015 -- October 2020}{%
+        \resumerole{Senior Software/DevOps Engineer}{ainonline.com}{January 2015 -- October 2020}{%
           \resumeroleitems{%
             \resumeroleitem{Architected and executed an innovative DevOps and backend development strategy, leading to the successful launch of two transformative media products}
             \resumeroleitem{Implemented local development environments, CI/CD pipelines, and cutting-edge QA methodologies, resulting in a 35\% decrease in production bugs and a 25\% improvement in team collaboration and efficiency}
             \resumeroleitem{Guided and mentored junior engineers, emphasizing soft skills and engineering best practices, leading to a 30\% increase in overall team productivity and timely delivery of key milestones}
             \resumeroleitem{Instituted CD pipeline, including functional tests and staging deployment, resulting in 33\% decrease in Change Failure Rate}
-            \resumeroleitem{Created tailored Vagrant-based solution for local development; increased team productivity by 30\% and enabled rapid iteration and testing of new features}
+            \resumeroleitem{Created a Vagrant-based solution for local development; increased team productivity by 30\% and enabled rapid iteration and testing of new features}
             \resumeroleitem{Developed an app to centralize ad sales, subscriptions, and circulation data; this reduced manual data entry by 80\%, saved management and sales teams 20 hours per week, and empowered data-driven decision-making}
             \resumeroleitem{Architected CI pipeline, encompassing unit tests, static analysis, and code style tests, yielding 30\% decrease in Change Failure Rate}
             \resumeroleitem{Migrated systems from Acquia hosting to sustainable, self-servicing AWS, cutting infrastructure expenses by over two-thirds and reducing annual hosting costs by 40\%}
@@ -242,12 +225,12 @@
     }% End Aviation International News
 
     % Begin DEVONtechnologies
-    \item \resumeemployer{\href{https://www.devontechnologies.com/}{DEVONtechnologies}}{January 2011 -- December 2015}
+    \resumeemployer{\href{https://www.devontechnologies.com/}{DEVONtechnologies}}{January 2011 -- December 2015}
     {% Begin roles at DEVONtechnologies
       \resumeroles{% List of roles at DEVONtechnologies
 
         % Software Engineer Role
-        \item \resumerole{Software Engineer}{DEVONthink Sync}{January 2011 -- December 2015}{%
+        \resumerole{Software Engineer}{DEVONthink Sync}{January 2011 -- December 2015}{%
           \resumeroleitems{%
             \resumeroleitem{Developed, launched, and maintained proprietary sync technologies for flagship macOS/iOS desktop document database app}
             \resumeroleitem{Collaborated and communicated within a globally dispersed engineering department across six countries and four continents}
@@ -265,8 +248,85 @@
 
 % Define my education
 \newcommand{\myeducation}{%
+  \noindent\textbf{\href{https://www.unlv.edu}{University of Nevada at Las Vegas}} (Las Vegas, NV)
+  \begin{itemize}
+    \item Bachelor's in Computer Science \hfill May 2009 -- December 2011
+  \end{itemize}
+}
+
+% Define a list of skill areas.
+% This will be a list of items, each of which is a resumeskillarea command.
+\newcommand{\resumeskillareas}[1]{%
+  \begin{itemize}[leftmargin=0pt, noitemsep, nosep, label={}]
+    #1
+  \end{itemize}
+}
+
+% Define a skill area and its skills.
+\newcommand{\resumeskillarea}[2]{%
+  \item \small\textbf{#1}: #2
+}
+
+% Define a resume skill language.
+% Each language is a language name, years of experience, and list of projects.
+\newcommand{\resumeskilllanguage}[4]{%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    unicode,
+    ActualText={\pdfnewline #3 years of experience in #2 \pdfnewline #2 projects: #4}
+  }
+  \normalfont #1
+  \EndAccSupp{}
+}
+
+% Define a list of resume skill language projects.
+% This will be a list of items, each of which is a resumeskilllanguageproject command.
+\newcommand{\resumeskilllanguageprojects}[1]{%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    unicode,
+    ActualText={\pdfnewline}
+  }
+  #1
+  \EndAccSupp{}
+}
+
+% Define a resume skill language project.
+\newcommand{\resumeskilllanguageproject}[3]{%
+  \BeginAccSupp{
+    method=pdfstringdef,
+    unicode,
+    ActualText={\pdfnewline - #1 (see #2): #3}
+  }
+  \item \href{#2}{#1}: #3
+  \EndAccSupp{}
 }
 
 % Define my skills
 \newcommand{\myskills}{%
+  % Begin skill areas list
+  \resumeskillareas{%
+    \resumeskillarea{Languages}{%
+      % Python, JavaScript, PHP, Ruby, Java, C\#, C++, C, Swift, Objective-C, Bash, SQL, HTML, CSS, XML, JSON, YAML,
+      \resumeskilllanguage{PHP}{PHP}{9}{%
+        \pdfnewline - VA.gov CMS (https://www.va.gov/) (2020-2024): I developed and maintained the backend for a major government website, including custom code for a Drupal 8/9/10 CMS.
+        \pdfnewline - AINonline (https://www.ainonline.com/) (2016-2020): I developed and maintained the backend for an aviation news website, including custom code for a Drupal 7 CMS, ad sales, a custom newsletter generator, and subscription management.
+        \pdfnewline - BJTonline (https://www.bjtonline.com/) (2016-2020): I developed and maintained the backend for a business aviation news website, including custom code for a Drupal 7 CMS, ad sales, and subscription management.
+        \pdfnewline - FutureFlight (https://www.futureflight.aero/) (2019-2020): I developed and maintained the backend for an aviation news website, including custom code for a Drupal 8 CMS, a custom newsletter generator, and subscription management.
+      }
+      \resumeskilllanguage{Objective-C}{Objective-C}{4}{%
+        \pdfnewline - DEVONthink Pro Sync (https://devontechnologies.com/) (2012-2015): I developed and maintained the sync engine for a macOS/iOS desktop document database app.
+      }
+      \resumeskilllanguage{\LaTeX{}}{LaTeX}{1}{%
+        \pdfnewline - Resume (https://github.com/ndouglas/resume) (2024-): I rewrote my resume in LaTeX to improve its maintainability and my ability to fine-tune it for individual job descriptions.
+      }
+    }
+    \resumeskillarea{Infrastructure-as-Code}{Terraform, CloudFormation, Ansible, Puppet, Chef, SaltStack}
+    \resumeskillarea{CI/CD}{Jenkins, GitHub Actions, CircleCI, Travis CI, GitLab CI, Bitbucket Pipelines}
+    \resumeskillarea{Containerization}{Docker, Kubernetes, Nomad, Amazon ECS, Amazon EKS}
+    \resumeskillarea{Cloud Platforms}{Amazon Web Services, Google Cloud Platform, Microsoft Azure}
+    \resumeskillarea{Monitoring}{Prometheus, Grafana, Datadog, New Relic, Amazon CloudWatch}
+    \resumeskillarea{Logging}{Elasticsearch, Logstash, Kibana, Splunk, Sumo Logic}
+    \resumeskillarea{Networking}{TCP/IP, DNS, HTTP, HTTPS, VPN, VPC, Route 53, CloudFront, ELB, ALB, NLB}
+  }
 }
