Fix some formatting issues.

--- a/me.tex
+++ b/me.tex
@@ -126,8 +126,8 @@
 % This is a two-column table with the employer on the left and the period of
 % employment on the right.
 \newcommand{\resumeemployer}[2]{%
-  \noindent\begin{tabularx}{\linewidth}{@{}L R@{}}
-    \item \textbf{#1} & #2 \\
+  \item \noindent\begin{tabularx}{\linewidth}{@{}L R@{}}
+    \textbf{#1} & #2 \\
   \end{tabularx}\vspace{-4pt}
 }
 
@@ -174,7 +174,7 @@
         \resumerole{Senior DevOps Engineer}{VA.gov Check-In Experience Team}{February 2024 -- Present}{%
           \resumeroleitems{%
             \resumeroleitem{Haven't blown anything up yet}
-            \resumeroleitem{Served on a policy team to improve hiring practices for DevOps engineers}
+            \resumeroleitem{Served on a task force to improve hiring practices for DevOps engineers}
           } % End CIE DevOps Engineer role items.
         } % End CIE DevOps Engineer Role
 
