--- a/me.tex
+++ b/me.tex
@@ -2,6 +2,7 @@
 \usepackage{accsupp}
 \usepackage{array}
 \usepackage{enumitem}
+\usepackage{ifthen}
 \usepackage{fontawesome5}
 \usepackage[pdftex]{hyperref}
 \usepackage{tabularx}
@@ -18,6 +19,21 @@
 % Define new column types.
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
 \newcolumntype{R}{>{\raggedleft\arraybackslash}X}
+
+% Define the boolean variable outside of the environment to ensure it's recognized.
+\newboolean{firstitem}
+
+% Define a new list type for a comma-separated list.
+\newenvironment{runlist}
+{% Initialization
+  \setboolean{firstitem}{true}% Flag to track the first item
+  \renewcommand\item{%
+              \ifthenelse{\boolean{firstitem}}%
+              {\setboolean{firstitem}{false}}% First item, do not print comma, switch flag off
+              {\unskip, }% Not the first item, print comma
+        }%
+}
+{}
 
 % A PDF command to insert a newline.
 \newcommand{\pdfnewline}{^^J}
@@ -277,19 +293,18 @@
 
 % Define a skill area and its skills.
 \newcommand{\resumeskillarea}[2]{%
-  \item \small\textbf{#1}: #2
+  \item \small\textbf{#1}: \begin{runlist}#2\end{runlist}
 }
 
 % Define a resume skill language.
 % Each language is a language name, years of experience, and list of projects.
 \newcommand{\resumeskilllanguage}[4]{%
-  \BeginAccSupp{
+  \item\BeginAccSupp{
     method=pdfstringdef,
     unicode,
-    ActualText={\pdfnewline #3 years of experience in #2 \pdfnewline #2 projects: #4 \pdfnewline }
-  }
-  \normalfont #1
-  \EndAccSupp{}
+    ActualText={\pdfnewline #3 years of experience in #2 \pdfnewline #2 projects: #4 \pdfnewline}
+  }\normalfont{#1}%
+  \EndAccSupp{}%
 }
 
 % Define a list of resume skill language projects.
@@ -299,9 +314,9 @@
     method=pdfstringdef,
     unicode,
     ActualText={\pdfnewline}
-  }
-  #1
-  \EndAccSupp{}
+  }%
+  #1%
+  \EndAccSupp{}%
 }
 
 % Define a resume skill language project.
@@ -311,7 +326,7 @@
     unicode,
     ActualText={\pdfnewline - #1 (see #2): #3}
   }
-  \item \href{#2}{#1}: #3
+  \item\href{#2}{#1}: #3
   \EndAccSupp{}
 }
 
@@ -334,12 +349,60 @@
         \pdfnewline - Resume (https://github.com/ndouglas/resume) (2024-): I rewrote my resume in LaTeX to improve its maintainability and my ability to fine-tune it for individual job descriptions.
       }
     }
-    \resumeskillarea{Infrastructure-as-Code}{Terraform, CloudFormation, Ansible, Puppet, Chef, SaltStack}
-    \resumeskillarea{CI/CD}{Jenkins, GitHub Actions, CircleCI, Travis CI, GitLab CI, Bitbucket Pipelines}
-    \resumeskillarea{Containerization}{Docker, Kubernetes, Nomad, Amazon ECS, Amazon EKS}
-    \resumeskillarea{Cloud Platforms}{Amazon Web Services, Google Cloud Platform, Microsoft Azure}
-    \resumeskillarea{Monitoring}{Prometheus, Grafana, Datadog, New Relic, Amazon CloudWatch}
-    \resumeskillarea{Logging}{Elasticsearch, Logstash, Kibana, Splunk, Sumo Logic}
-    \resumeskillarea{Networking}{TCP/IP, DNS, HTTP, HTTPS, VPN, VPC, Route 53, CloudFront, ELB, ALB, NLB}
+    \resumeskillarea{Infrastructure-as-Code}{%
+      \item Terraform
+      \item CloudFormation
+      \item Ansible
+      \item Puppet
+      \item Chef
+      \item SaltStack
+    }
+    \resumeskillarea{CI/CD}{%
+      \item Jenkins
+      \item GitHub Actions
+      \item CircleCI
+      \item Travis CI
+      \item GitLab CI
+      \item Bitbucket Pipelines
+    }
+    \resumeskillarea{Containerization}{%
+      \item Docker
+      \item Kubernetes
+      \item Nomad
+      \item Amazon ECS
+      \item Amazon EKS
+    }
+    \resumeskillarea{Cloud Platforms}{%
+      \item Amazon Web Services
+      \item Google Cloud Platform
+      \item Microsoft Azure
+    }
+    \resumeskillarea{Monitoring}{%
+      \item Prometheus
+      \item Grafana
+      \item Datadog
+      \item New Relic
+      \item Amazon CloudWatch
+    }
+    \resumeskillarea{Logging}{%
+      \item Elasticsearch
+      \item Logstash
+      \item Kibana
+      \item Splunk
+      \item Sumo Logic
+    }
+    \resumeskillarea{Networking}{%
+      \item TCP/IP
+      \item DNS
+      \item HTTP
+      \item HTTPS
+      \item VPN
+      \item VPC
+      \item Route 53
+      \item CloudFront
+      \item ELB
+      \item ALB
+      \item NLB
+    }
   }
 }
